add div, h3, p placeholders

--- a/index.html
+++ b/index.html
@@ -7,4 +7,8 @@
     <h1>My Portfolio</h1>
     <p>Ruh-roh. Gotta do this now.</p>
   </div>
+  <div class="card">
+    <h3>Adding More Stuff</h3>
+      <p>Here's some text. Cool? I dig it.</p>
+  </div>
 </body>
