--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Wakka wakka!</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="card">
